--- a/css/output.css
+++ b/css/output.css
@@ -852,6 +852,34 @@ video {
   width: 0.25rem;
 }
 
+.w-2 {
+  width: 0.5rem;
+}
+
+.w-8 {
+  width: 2rem;
+}
+
+.w-32 {
+  width: 8rem;
+}
+
+.w-28 {
+  width: 7rem;
+}
+
+.w-24 {
+  width: 6rem;
+}
+
+.w-0 {
+  width: 0px;
+}
+
+.w-36 {
+  width: 9rem;
+}
+
 .min-w-1 {
   min-width: 0.25rem;
 }
@@ -1107,6 +1135,10 @@ video {
   padding: 1.5rem;
 }
 
+.p-3 {
+  padding: 0.75rem;
+}
+
 .px-6 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
@@ -1329,6 +1361,14 @@ video {
 
   .sm\:w-2 {
     width: 0.5rem;
+  }
+
+  .sm\:w-0 {
+    width: 0px;
+  }
+
+  .sm\:w-36 {
+    width: 9rem;
   }
 
   .sm\:flex-row {
