--- a/public/css/output.css
+++ b/public/css/output.css
@@ -808,6 +808,18 @@ video {
   height: 4rem;
 }
 
+.h-36 {
+  height: 9rem;
+}
+
+.h-24 {
+  height: 6rem;
+}
+
+.h-28 {
+  height: 7rem;
+}
+
 .min-h-96 {
   min-height: 24rem;
 }
@@ -850,6 +862,34 @@ video {
 
 .w-1 {
   width: 0.25rem;
+}
+
+.w-2 {
+  width: 0.5rem;
+}
+
+.w-8 {
+  width: 2rem;
+}
+
+.w-32 {
+  width: 8rem;
+}
+
+.w-28 {
+  width: 7rem;
+}
+
+.w-24 {
+  width: 6rem;
+}
+
+.w-0 {
+  width: 0px;
+}
+
+.w-36 {
+  width: 9rem;
 }
 
 .min-w-1 {
@@ -1107,6 +1147,10 @@ video {
   padding: 1.5rem;
 }
 
+.p-3 {
+  padding: 0.75rem;
+}
+
 .px-6 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
@@ -1329,6 +1373,14 @@ video {
 
   .sm\:w-2 {
     width: 0.5rem;
+  }
+
+  .sm\:w-0 {
+    width: 0px;
+  }
+
+  .sm\:w-36 {
+    width: 9rem;
   }
 
   .sm\:flex-row {
